--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Best Courses</title>
+    <title>Product Card</title>
   </head>
   <body>
     <div class="card-container">
